# AT-ONTOLOGY

./: .env.sample  .gitignore  Makefile  Pipfile  manage.py  pyproject.toml  recieve.py  send.py  setup.py
at_ontology/: __main__.py
at_ontology/absolute/: django_init.py
at_ontology/apps/ontology/: admin.py  apps.py  models.py  serializers.py  service.py  urls.py  views.py
at_ontology/apps/ontology/migrations/: 0001_initial.py  0002_remove_relationship_files_remove_vertex_files_and_more.py  0003_initial.py  0004_relationshipnew.py  0005_rename_relationshipnew_relationship_and_more.py  0006_relationshipartifactassignment_and_more.py  0007_alter_relationshippropertyassignment_options_and_more.py  0008_alter_relationshipartifactassignment_id_and_more.py  0009_alter_relationship_ontology_and_more.py  0010_alter_relationshipartifactassignment_id_and_more.py  0011_alter_relationshipartifactassignment_id_and_more.py  0012_relationshipartifactassignment_content_and_more.py  (+7 more)
at_ontology/apps/ontology_model/: admin.py  apps.py  import_loader.py  models.py  service.py  urls.py
at_ontology/base_server/: api_urls.py  asgi.py  autoschema.py  settings.py  urls.py
at_ontology/core/: arguments.py  component.py
at_ontology/utils/: settings.py
at_ontology_instruments/apps/ontology/: admin.py  apps.py
at_ontology_instruments/apps/ontology_model/: admin.py  apps.py
at_ontology_instruments/base_server/: asgi.py  settings.py
ontology/: admin.py  apps.py  models.py
ontology/migrations/: 0001_initial.py  0002_alter_element_options_alter_file_options_and_more.py  0003_file_extension_file_name.py  0004_relation_data_alter_element_data.py  0005_alter_element_files_alter_relation_transitivity.py
ontology_instruments/: asgi.py  settings.py  urls.py  wsgi.py
ontology_model/: admin.py  apps.py  models.py
ontology_model/migrations/: 0001_initial.py  0002_alter_elementtype_options_alter_relationtype_options_and_more.py  0003_alter_relationtype_default_reflexivity_and_more.py
(+74 files in other folders)
