[tool.poetry]
name = "at-ontology"
version = "0.1.0"
description = ""
authors = ["grigandal625"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.6"
setuptools = "^75.8.0"
jsonschema = "^4.23.0"

[tool.poetry.scripts]
post-install = "setup:PostInstallCommand"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
