[tool.poetry]
name = "at-ontology"
version = "0.1.4"
description = ""
authors = ["grigandal625"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
jsonschema = "^4.23.0"
at-queue = {git = "https://github.com/grigandal625/AT_QUEUE.git", rev = "master"}
django-cors-headers = "^4.7.0"
uvicorn = "^0.35.0"
whitenoise = "^6.9.0"
at-ontology-parser = {git = "https://github.com/grigandal625/AT_ONTOLOGY_PARSER.git", rev = "master"}
django-jet-reboot = "^1.3.10"
django-extensions = "^4.1"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
